[package]
name = "f_os"
version = "0.0.2"
authors = ["Filip Petrovic <filippetrovic603@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
